feature/api_finalizada
